mi primer commit

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <h5 class="card-title">Egipto</h5>
               <p class="card-text mb-0">6 dias, 7 noches con desayuno incluido</p>
               <p class="card-text"><i class="fa-sharp fa-solid fa-location-dot textlight"></i>
-                Copa Airlines, Chile</p>
+                Latam, Chile</p>
               <div class="card-footer">
                 <p class="card-text-precio">$4.990.000</p>
                 <p class="card-text-oferta"><button>$3.990.000</button></p>
